--- a/package.json
+++ b/package.json
@@ -1,5 +1,5 @@
 {
-  "homepage": "https://github.com/mynkk732/virtualworldmc.com/",
+  "homepage": "http://github.com/mynkk732/VirtualM.git",
   "name": "virtual-world",
   "private": true,
   "version": "0.0.0",
